[package]
name = "logic-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juice = {path = "../juice/juice", version = "0.3.0", features = ["cuda"]}
coaster = {version = "0.2.0", path = "../juice/coaster"}
rand = "0.8.5"
itertools = "0.10.5"
capnp = "0.14"